--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   <div class="post">
     {{ content }}
   </div>
-  {%- if site.plainwhite.disqus_shortname -%}
+  <!-- {%- if site.plainwhite.disqus_shortname -%}
   <div id="disqus_thread" style="margin-top:25px"></div>
   <script>
     var disqus_config = function () {
@@ -35,5 +35,12 @@ layout: default
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments
       powered by Disqus.</a></noscript>
-  {%- endif -%}
+  {%- endif -%} -->
+  <script src="https://utteranc.es/client.js"
+        repo="mmminji/mmminji.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 </div>
