--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
   {%- endif -%} -->
   <script src="https://utteranc.es/client.js"
         repo="mmminji/mmminji.github.io"
-        issue-term="pathname"
+        issue-term="title"
         theme="github-light"
         crossorigin="anonymous"
         async>
